Add password reset email

--- a/firebase/config.json
+++ b/firebase/config.json
@@ -1,4 +1,5 @@
 {
+    "apiKey": "AIzaSyAt21y6iMy45pQ814LMy93hlYmqSKCn4Lo",
     "authDomain": "physolympiadtrainer.firebaseapp.com",
     "databaseURL": "https://physolympiadtrainer.firebaseio.com",
     "projectId": "physolympiadtrainer",
