--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/ricardoskewes/PhysTrainer#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "^10.0.0"
+    "express-fileupload": "^1.2.1",
+    "firebase-admin": "^10.0.0",
+    "multer": "^1.4.3"
   }
 }
