--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ricardoskewes/PhysTrainer#readme",
   "dependencies": {
+    "eta": "^1.12.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "firebase-admin": "^10.0.0",
