--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "firebase-admin": "^10.0.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "mustache-express": "^1.3.2"
   }
 }
