--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/ricardoskewes/PhysTrainer#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "eta": "^1.12.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "firebase-admin": "^10.0.0",
     "multer": "^1.4.3",
-    "mustache-express": "^1.3.2"
+    "mustache-express": "^1.3.2",
+    "nodemon": "^2.0.15"
   }
 }
