--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ google-resumable-media==2.3.3
 googleapis-common-protos==1.56.2
 grpcio==1.46.3
 grpcio-status==1.46.3
+gunicorn==20.0.4
 httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.11.4
